Fix for form title not working on ios

--- a/src/app/components/Forms/Title/index.module.css
+++ b/src/app/components/Forms/Title/index.module.css
@@ -4,13 +4,15 @@
 }
 .Title{
     display: flex;
+    align-items: center;
+    justify-content: flex-start;
     flex-direction: row;
     z-index: 4;
     position: absolute;
-    top: 30px;
+    top: 0;
     margin: 0;
     left: 25px;
-    height: 100%;
+    height: 80%;
     width: 100%;
     box-sizing: border-box;
 }
@@ -55,15 +57,19 @@
     z-index: 2;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1100px) {
     .Title>div{
-
+        font-size: 40px;
     }
-
 }
 
+@media screen and (max-width: 800px) {
+    .Title>div{
+        font-size: 30px;
+    }
+}
 @media screen and (max-width: 450px) {
     .Title>div{
-
+        font-size: 25px;
     }
 }
